--- a/templates/kafka-index.html.jinja
+++ b/templates/kafka-index.html.jinja
@@ -2,53 +2,7 @@
 
 <head>
     <title>Kafka Improvement Proposals</title>
-    <style type="text/css">
-        
-        html * {
-            font-family: Arial, Helvetica, sans-serif;
-        }
-
-        table,
-        th,
-        td {
-            border: 1px solid black;
-            border-collapse: collapse;
-        }
-        tr:hover {
-          background-color:#CCE6FF;
-        }
-
-        /* Tooltip container */
-        .tooltip {
-            position: relative;
-            display: inline-block;
-            border-bottom: 1px dotted black;
-            /* If you want dots under the hoverable text */
-        }
-
-        /* Tooltip text */
-        .tooltip .tooltiptext {
-            visibility: hidden;
-            width: 200px;
-            background-color: black;
-            color: #fff;
-            text-align: center;
-            padding: 5px 0;
-            border-radius: 6px;
-
-
-            /* Position the tooltip text - see examples below! */
-            position: absolute;
-            z-index: 1;
-            top: -5px;
-            right: 105%;
-        }
-
-        /* Show the tooltip text when you mouse over the tooltip container */
-        .tooltip:hover .tooltiptext {
-            visibility: visible;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
