--- a/templates/flink-index.html.jinja
+++ b/templates/flink-index.html.jinja
@@ -9,9 +9,11 @@
 
 <body>
     <h1>Flink Improvement Proposals (FLIPs)</h1>
-    <p><a href="index.html">Back to OSSIP</a></p>
-    <p>GitHub Repository: <a href="https://github.com/tomncooper/ossip">tomncooper/ossip</a></p>
-    <p>Last Updated: {{ date }}</p>
+    <div class="nav-bar">
+        <div class="nav-item"><a href="index.html">Back to OSSIP</a></div>
+        <div class="nav-item">GitHub Repository: <a href="https://github.com/tomncooper/ossip">tomncooper/ossip</a></div>
+        <div class="nav-item">Last Updated: {{ date }}</div>
+    </div>
     <table>
         <tr>
             <th>FLIP</th>
