Made links in FLIP more info clickable
Signed-off-by: Thomas Cooper <code@tomcooper.dev>

--- a/templates/flink-index.html.jinja
+++ b/templates/flink-index.html.jinja
@@ -23,7 +23,7 @@
             <th>Created by</th>
             <th>State</th>
             <th>JIRA</th>
-            <th>Raw Data</th>
+            <th>More Info</th>
         </tr>
         {% for flip in flip_data %}
         <tr>
